--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
+:root {
+  --fs-md: 1rem;
+  --fs-st: 0.85rem;
+  --fs-sm: 0.8rem;
+  --fs-xs: 0.75rem;
+  --clr-main: rgb(68, 0, 255);
+  --gray: rgb(216, 216, 216);
+}
 body {
   margin: 0;
+  color: #111f33;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 95%;
+  margin: auto;
+  max-width: 93rem;
+}
+
+input {
+  outline: none;
+  border: none;
+}
+a {
+  text-decoration: none;
+}
+/* ================ NAV BAR ==================== */
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
+  border-bottom: 1px solid #dedeff;
+  color: #999;
+}
+.logo {
+  width: 40%;
+}
+.logo-desktop {
+  display: none;
+}
+
+.login-button button{
+  outline: none;
+  border: none;
+  /* padding-left: 1rem; */
+  font-size: var(--fs-st);
+  padding: .5rem .8rem;
+  font-weight: 700;
+  text-transform: capitalize;
+  border-radius: 4px;
+}
+
+.btn-signup {
+  background-color: var(--clr-main);
+  color: #fff;
+  margin-right: 1rem;
+}
+
+ul {
+  list-style-type: none;
+  padding-block: 0.5rem;
+}
+ul li {
+  /* margin-top: 1rem; */
+  border-bottom: 1.4px solid #dedeff;
+  padding: 0.6rem;
+  transition: all .3s ease-in-out;
+}
+ul li:hover {
+  background-color: #dedeff81;
+}
+.description-text{
+  color: #707070;
+  max-width: 45rem;
+  line-height: 2rem;
+  margin-top: 2rem;
+}
+.description-text * {
+  display: block;
+}
+@media(min-width: 35rem){
+  .logo-mobile {
+      display: none;
+  }
+  .logo-desktop {
+      display: block;
+  }
+  .login-button button{
+      padding-left: 1rem;
+  }
 }
