--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -26,6 +26,7 @@
     height: auto;
     padding: 2rem 1rem;
     background-color: #fff;
+    margin: auto;
     border-radius: 4px;
   }
   .form_title {
