--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1.4px solid var(--gray);
+  margin: auto;
 }
 .request_type {
   padding-block: .5rem;
